Bug 446882 - Right click when taking a rectangular screenshot reports failure when using "On click" setting on X11
Summary: Right click when taking a rectangular screenshot reports failure when using "...
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: 21.12.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Boudhayan Gupta
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-12 13:33 UTC by schmidtmanuel92
Modified: 2022-01-04 23:04 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.12.1
Sentry Crash Report:


Attachments
Spectacle window with error (68.10 KB, image/png)
2021-12-12 13:33 UTC, schmidtmanuel92
Details

Note You need to log in before you can comment on or make changes to this bug.
Description schmidtmanuel92 2021-12-12 13:33:24 UTC
Created attachment 144481 [details]
Spectacle window with error

SUMMARY
When you right click while trying to take a rectangular screenshot, you return to the Spectacle window and it reports:
>Could not take a screenshot. Please report this bug here: create a spectacle bug

STEPS TO REPRODUCE
1. Open Spectacle
2. Set Capture Mode to 'Rectangular Region'
3. Click Take a New Screenshot
4. Right click anywhere

**Observed Behaviour**
you return to the Spectacle window and it reports:
>Could not take a screenshot. Please report this bug here: create a spectacle bug

See attachment

**Expected Behaviour**
I guess nothing as long as there is no selection to reset.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux
(available in About System)
KDE Plasma Version: 5.23.4
KDE Frameworks Version: 5.88.0
Qt Version: 5.15.2
Comment 1 Antonio Prcela 2021-12-13 18:03:05 UTC
Can't reproduce.
X11 or Wayland?
What other settings are active/inactive in Spectacle?
Comment 2 schmidtmanuel92 2021-12-14 13:09:57 UTC
This is with X11, no settings changed besides enabling 'Include mouse pointer'.

What happens when you rightclick before creating the rectangle you want to capture?
Comment 3 schmidtmanuel92 2021-12-14 13:18:40 UTC
(In reply to schmidtmanuel92 from comment #2)
> This is with X11, no settings changed besides enabling 'Include mouse
> pointer'.
> 
> What happens when you rightclick before creating the rectangle you want to
> capture?

Oh, I have 'On Click' enabled. It only happens when 'On Click' is on. You can check the attachment of the initial report to see my exact settings. I have not changed anything in the 'Configure' menu.
Comment 4 Nate Graham 2021-12-14 20:40:54 UTC
Can confirm that.
Comment 5 Antonio Prcela 2021-12-14 21:03:54 UTC
With 'on click' enabled, I can also confirm it.
Tho, I probably won't make it within the next two weeks (holidays , etc.). Will surely take a look into it after christmas :)
Comment 6 schmidtmanuel92 2021-12-14 22:07:19 UTC
No worries, this is super low priority anyway, take all the time you want. Just thought I'd report it because it's most likely unintended behaviour.
Comment 7 Bug Janitor Service 2021-12-28 10:10:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/spectacle/-/merge_requests/115
Comment 8 Bharadwaj Raju 2022-01-02 06:08:47 UTC
Git commit 2f9bbbfc2000dd118ea7fdeb2b8ffa28b65f0c71 by Bharadwaj Raju, on behalf of Antonio Prcela.
Committed on 02/01/2022 at 05:46.
Pushed by bharadwaj-raju into branch 'release/21.12'.

Do not show error message when canceling with rightclick while in rectangluar mode

Don't treat it as an error when 'on click' is enabled and a user presses right mouse
click while taking a screenshot with rectangluar mode, instead of drawing a rectangle
with left click.
Instead, treat it as a simple cancel without failure.

M  +3    -1    src/SpectacleCore.cpp

https://invent.kde.org/graphics/spectacle/commit/2f9bbbfc2000dd118ea7fdeb2b8ffa28b65f0c71