Do not show error message when canceling with rightclick while in rectangluar mode

Don't treat it as an error when 'on click' is enabled and a user presses right mouse
click while taking a screenshot with rectangluar mode, instead of drawing a rectangle
with left click.
Instead, treat it as a simple cancel without failure.

BUG: 446882