src/SpectacleCore.cpp
@@ -408,7 +408,9 @@ void SpectacleCore::screenshotFailed()
         Q_EMIT allDone();
         return;
     case StartMode::Gui:
-        mMainWindow->screenshotFailed();
+        if (ExportManager::instance()->captureMode() != Spectacle::CaptureMode::RectangularRegion) {
+            mMainWindow->screenshotFailed();
+        }
         mMainWindow->setScreenshotAndShow(QPixmap());
     }
 }
